fixed the carousel alignment :skull:

--- a/src/app/feature/pages/dashboard/dashboard.component.scss
+++ b/src/app/feature/pages/dashboard/dashboard.component.scss
@@ -39,6 +39,7 @@
 
 .investment-header-content {
   /* padding-right: 10px; */
+  min-width: 293px;
   margin-right: 30px;
 
   h2 {
@@ -68,7 +69,14 @@
   font-size: 12px;
   border: 1px solid $ddx-light;
   border-radius: 8px;
-  margin-left: 20px;
+}
+
+::ng-deep .owl-item {
+  &:not(:first-child) {
+    .item-carousels {
+      margin-left: 20px;
+    }
+  }
 }
 
 #item-carousels-wrapper {
@@ -421,6 +429,12 @@ th.mat-header-cell {
   }
 }
 
+@media only screen and (min-width: 960px) and (max-width: 1250px) {
+  ::ng-deep #carousel-wrapper {
+    max-width: calc(100% - 313px) !important;
+  }
+}
+
 @media only screen and (max-width: 1200px) {
 
   #carousel-wrapper {
@@ -428,8 +442,8 @@ th.mat-header-cell {
   }
 
   .item-carousels {
-    margin-left: 0px;
-    margin-right: 20px;
+    // margin-left: 0px;
+    // margin-right: 10px;
     max-width: 320px;
   }
 
